# opencv_on_cuda

./: CMakeLists.txt
src/: main.cpp  myKernel.cu
